--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GXQLQ87K9N"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-GXQLQ87K9N"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-GXQLQ87K9N');
-</script>
+</script> -->
     <meta charset="utf-8" />
     <link rel="icon" href="images/Bungee Shade.png" />
     
