--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Apex Mind Apex Body offers a wealth of training, nutrition, and recovery articles for fitness enthusiasts at every level. Elevate your training, nourish your body, and optimize recovery to achieve your fitness goals."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
