--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,15 @@
   gtag('config', 'G-GXQLQ87K9N');
 </script>
     <meta charset="utf-8" />
-    <link rel="icon" href="images/Bungee Shade.png" />
+    <link rel="icon" href="/images/logo1.png" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
+      name="description" 
       content="Apex Mind Apex Body offers a wealth of training, nutrition, and recovery articles for fitness enthusiasts at every level. Elevate your training, nourish your body, and optimize recovery to achieve your fitness goals."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo1.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
